--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
   font-family: "Helvetica", sans-serif;
   overflow: hidden;
 }
-background: blue
+background-color: blue
 #map {
   height: 200px;
   width: 100vw;
