--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,9 @@ body {
   font-family: "Helvetica", sans-serif;
   overflow: hidden;
 }
-background-color: blue
+body {
+  background-color: lightblue;
+}
 #map {
   height: 200px;
   width: 100vw;
