--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 0px;
   margin: 0px;
-  font-family: "Times New Roman", Times, serif;
+  font-family: "Times New Roman", Courier, serif
   overflow: hidden;
 }
 body {
