--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ body {
   width: 100vw;
   z-index: 100;
   margin: 0;
-  padding: 0;
+  padding: 20px;
   visibility: hidden;
   font-weight: bold;
   text-align: center;
